add Update under HTTP POST
